--- a/style.css
+++ b/style.css
@@ -215,5 +215,12 @@ header h1 {
 .combo-buttons button:hover {
   background: #ffffff;
   color: #000000;
-  border: 4px solid #ffffff;
+}
+
+#color-display {
+  margin-top: 0.9rem;
+  margin-bottom: 0.6rem;
+  font-style: italic;
+  color: #ffffff;
+  font-size: 1rem;
 }
